<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shaikhbro.moneytracker.fragment.AddExpenseFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/enter_expense_amount_text"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/expense_cat_text"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/expense_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_money_text"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/amount_expense"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="number"
        android:text="0" />

    <Button
        android:id="@+id/add_amount_expense_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:text="@string/save_text" />
</LinearLayout>
