<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="5-10-2017"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/funds_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_status"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/expense_category"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/sample_cat_text"
            android:textColor="@android:color/black"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/amount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="amount in dollars"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/total_amount_txt"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>